@@ -1,1 +1,1 @@
-0.6.0-dev
+0.6.0-rc2
